--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-native": "0.70.6",
     "react-native-get-location": "^2.2.1",
     "react-native-image-picker": "^4.10.3",
+    "react-native-maps": "^1.3.2",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.2",
     "react-native-vector-icons": "^9.2.0"
