--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-native-maps": "^1.3.2",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.2",
+    "react-native-sqlite-storage": "^6.0.1",
     "react-native-vector-icons": "^9.2.0"
   },
   "devDependencies": {
